--- a/docs/0.6/Mustaches.md.hbs
+++ b/docs/0.6/Mustaches.md.hbs
@@ -373,63 +373,9 @@ In previous versions of Ractive it was required to close a section with the open
 
 ### Restricted references
 
-Normally, references are resolved according to a specific algorithm, which involves *moving up the context stack* until a property matching the reference is found. In the vast majority of cases this is exactly what you want, but occasionally (for example when dealing with {{{createLink 'parials' 'recursive partials' 'recursive-partials'}}}) it is useful to be able to specify that a property must exist *in the current context*.
+Normally, references are resolved according to a specific algorithm, which involves *moving up the context stack* until a property matching the reference is found. In the vast majority of cases this is exactly what you want, but occasionally (for example when dealing with {{{createLink 'partials' 'recursive partials' 'recursive-partials'}}}) it is useful to be able to specify more specific directives about the context of a property being referenced.
 
-To restrict a reference to the current context, prefix it with a `.`, e.g. `\{{#.bar}}`:
-
-```html
-\{{#foo}}
-  \{{#bar}}This section will render, because it will resolve to 'bar'\{{/bar}}
-  \{{#.bar}}This section will NOT render, because it resolves to 'foo.bar'\{{/.bar}}
-\{{/foo}}
-```
-
-```js
-ractive = new Ractive({
-  el: myContainer,
-  template: myTemplate,
-  data: { bar: true, foo: {} }
-});
-```
-
-
-### Ancestor references
-
-Very occasionally, you might need to refer explicitly to a property higher up in the tree to avoid naming conflicts. You can do that by prefixing references with `../` (or `../../`, or `../../../`...):
-
-```html
-<h1>Blog posts by \{{name}}</p>
-
-<ul class='blog-posts'>
-  \{{#posts}}
-    <li><a href='\{{ slugify(../../name) }}/\{{ slugify(name) }}'>\{{name}}</a></li>
-  \{{/posts}}
-</ul>
-```
-
-```js
-var ractive = new Ractive({
-  el: document.body,
-  template: myTemplate,
-  data: {
-    name: 'Rich',
-    posts: [
-      { name: 'This is a blog post' },
-      { name: 'And so is this' }
-    ],
-    slugify: function ( str ) {
-      var slug;
-      /* SOME CODE HAPPENS */
-      return slug;
-    }
-  }
-});
-```
-
-In this example, some damn fool decided it would be a good idea to give posts a 'name' property as well as authors. Which means that in the `href` attribute, it wouldn't be possible to refer to the root-level `name` property, because it would always resolve to the `name` property of the current post - and that's no good, because the root-level `name` property is used to construct the URL.
-
-By using `../../name` instead of `name`, we're saying 'go up one level (to `posts`), then up one more (to the root), and *then* look for the `name` property'.
-
+See {{{createLink 'References' 'References' 'restricted-references'}}} for all available reference restrictions.
 
 ### Expressions
 
