Fixing an error that wouldn't let this example work.
There was an issue with the Ractive instance not being passed in the components.

--- a/docs/0.6/Components.md.hbs
+++ b/docs/0.6/Components.md.hbs
@@ -46,7 +46,8 @@ var ractive = new Ractive({
   template: '#template',
   data: {
     nonIsolatedSetting: 'This is a non isolated setting, get it anywhere'
-  }
+  },
+  components: { Component: Component }
 });
 
 ```
