Instantiate the Ractive instance
Need to instantiate the Ractive object.

--- a/docs/0.6/Ractive.extend().md.hbs
+++ b/docs/0.6/Ractive.extend().md.hbs
@@ -16,7 +16,7 @@ var ractive = new MyRactive({
   el: 'container'
 });
 
-var ractive2 = Ractive({
+var ractive2 = new Ractive({
   el: 'container2',
   template: '<widget/>',
   components: {
