--- a/docs/0.6/Proxy events.md.hbs
+++ b/docs/0.6/Proxy events.md.hbs
@@ -65,9 +65,9 @@ ractive.on( 'addToCart', function ( event, item, qty ) {
 
 ### Cancelling DOM events
 
-If you return 'false' from a proxy event handler, ractive will automatically call both `preventDefault()` and `stopPropagation()` on the original DOM event.
+If you return `false` from a proxy event handler, ractive will automatically call both `preventDefault()` and `stopPropagation()` on the original DOM event.
 
-Note that returning `false` has a duel purpose of both cancelling the view hierarchy {{{createLink 'Event bubbling' 'event bubbling'}}} __as well as__ cancelling the DOM Event if the event was DOM-based.
+Note that returning `false` has a dual purpose of both cancelling further bubbling up the view hierarchy {{{createLink 'Event bubbling' 'event bubbling'}}} __as well as__ cancelling the DOM Event if the event was DOM-based.
 
 
 ## Reserved event names
