--- a/docs/0.6/Partials.md.hbs
+++ b/docs/0.6/Partials.md.hbs
@@ -169,7 +169,7 @@ Partial sections may be given explicit context by adding an expression after the
 \{{#list}}\{{>somePartial { item: ., magicNumber: 42 }}}\{{/}}
 ```
 
-In this example, `{{item}}` in `somePartial` will resolve to the current item in `list` and `magicNumber` will resolve to `42`. Ancestor references, members, object literals, and any other expressions that resolve to an object may be used as a context expression.
+In this example, `\{{item}}` in `somePartial` will resolve to the current item in `list` and `magicNumber` will resolve to `42`. Ancestor references, members, object literals, and any other expressions that resolve to an object may be used as a context expression.
 
 
 <a name="recursion"></a>
