--- a/templates/0.6/page.hbs
+++ b/templates/0.6/page.hbs
@@ -6,7 +6,7 @@
 
 	<title> {{title}} | Docs | Ractive.js </title >
 
-	<meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
+	<meta name='viewport' content='width=device-width'>
 
 	<link rel='icon' type='image/png' href='../assets/favicon.png'>
 	<link rel='stylesheet' href='../min.css'>
