--- a/docs/0.6/Routing.md.hbs
+++ b/docs/0.6/Routing.md.hbs
@@ -7,4 +7,4 @@ For a good introduction to routing, see [this Stack Overflow answer](http://stac
 
 Ractive doesn't have any built-in routing support, because it's a library not a framework (i.e. it works for you, you don't work for it).
 
-If your app needs routing, there are a number of decent routing-only libraries available - see [microjs.com](http://microjs.com/#rout) for starters. [page.js](http://visionmedia.github.io/page.js/) is a popular choice. Alternatively, if you're already using Backbone (see [[Using Ractive with Backbone]]), you could use [Backbone.Router](http://backbonejs.org/#Router).
+If your app needs routing, there are a number of decent routing-only libraries available - see [microjs.com](http://microjs.com/#rout) for starters. [page.js](http://visionmedia.github.io/page.js/) is a popular choice. Alternatively, if you're already using Backbone (see [Using Ractive with Backbone](/latest/using-ractive-with-backbone), you could use [Backbone.Router](http://backbonejs.org/#Router).
